# verificatum-vmn

./: .macros.m4  .travis.yml  .travis.yml~  .version.m4  AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.build  README.md  README_DEV.md  VerificatumTool.java  configure.ac
.github/workflows/: main.yml
demo/mixnet/: .checkbaseconf  .conf  .verificatum_random_source  README  README.md  bench  check  check_env  checkvmn  clean  cleanbench  decrypt  delete  demo  demoend  demointro  fetch_vmn_log  gen_ciphs  group_descriptions  info_files  keygen  lact  macros  mix  precomp  restore  sact  seedfile  setpk  shuffle  verify  vterm
demo/mixnet/benchmarks/: bench_config  benchmacros  decryption_keywidths_widths  decryption_keywidths_widths_template  decryption_lengths  decryption_lengths_template  decryption_parties  decryption_parties_template  extractresult  keygen_time  keygen_time_template  mixing_equals_shuffle_plus_decrypt  mixing_equals_shuffle_plus_decrypt_template  mixing_lengths  operation_keywidths_widths  operation_keywidths_widths_analyze  operation_keywidths_widths_run  operation_length  operation_length_analyze  operation_length_run  operation_parties  operation_parties_analyze  operation_parties_run  report  shuffling_keywidths_widths  shuffling_keywidths_widths_template  shuffling_lengths  shuffling_parties
src/java/com/verificatum/protocol/coinflip/: CoinFlipPRing.java  CoinFlipPRingSource.java  DemoCoinFlipPRingSource.java  package-info.java
src/java/com/verificatum/protocol/demo/: Demo.java  DemoConstants.java  DemoError.java  DemoException.java  DemoProtocol.java  DemoProtocolBBTKP.java  DemoProtocolElGamalFactory.java  package-info.java
src/java/com/verificatum/protocol/distr/: DKG.java  DemoDKG.java  DemoIndependentGenerator.java  DemoIndependentGeneratorsI.java  DemoPlainKeys.java  IndependentGenerator.java  IndependentGenerators.java  IndependentGeneratorsBasicI.java  IndependentGeneratorsFactory.java  IndependentGeneratorsI.java  IndependentGeneratorsIFactory.java  IndependentGeneratorsRO.java  IndependentGeneratorsROFactory.java  PlainKeys.java  package-info.java
src/java/com/verificatum/protocol/elgamal/: CiphertextReader.java  CiphertextReaderJSON.java  CiphertextReaderLine.java  CiphertextWriter.java  CiphertextWriterJSON.java  CiphertextWriterLine.java  DemoDistrElGamal.java  DistrElGamal.java  DistrElGamalGen.java  DistrElGamalSession.java  DistrElGamalSessionBasic.java  PlaintextDecoder.java  PlaintextDecoderJSON.java  PlaintextDecoderLine.java  ProtocolElGamal.java  ProtocolElGamalDemo.java  ProtocolElGamalGen.java  ProtocolElGamalInterface.java  ProtocolElGamalInterfaceDemo.java  ProtocolElGamalInterfaceFactory.java  ProtocolElGamalInterfaceJSON.java  ProtocolElGamalInterfaceJSONDecode.java  ProtocolElGamalInterfaceNative.java  ProtocolElGamalInterfaceRaw.java  ProtocolElGamalInterfaceSeq.java  ProtocolElGamalInterfaceSeqHex.java  ProtocolElGamalInterfaceSeqJSON.java  ProtocolElGamalInterfaceString.java  ProtocolElGamalInterfaceTool.java  ProtocolElGamalRear.java  ProtocolElGamalRearInterval.java  ProtocolElGamalRearParser.java  ProtocolElGamalRearPosition.java  ProtocolElGamalRearTool.java  TestProtocolElGamalRear.java  package-info.java
src/java/com/verificatum/protocol/hvzk/: CCPoS.java  CCPoSBasicW.java  CCPoSFactory.java  CCPoSW.java  CCPoSWFactory.java  Challenger.java  ChallengerI.java  ChallengerRO.java  DemoPoSCTW.java  PoS.java  PoSBasicTW.java  PoSC.java  PoSCBasicTW.java  PoSCFactory.java  PoSCMulti.java  PoSCTW.java  PoSCTWFactory.java  PoSFactory.java  PoSTW.java  PoSTWFactory.java  TestPoSCBasicTW.java  package-info.java
src/java/com/verificatum/protocol/mixnet/: DemoMixNetElGamal.java  DemoPermutationCommitment.java  DemoShufflerElGamal.java  MixNetElGamal.java  MixNetElGamalGen.java  MixNetElGamalInterfaceFactory.java  MixNetElGamalSession.java  MixNetElGamalTool.java  MixNetElGamalVerifyFiatShamir.java  MixNetElGamalVerifyFiatShamirSession.java  MixNetElGamalVerifyFiatShamirTool.java  PermutationCommitment.java  PermutationCommitmentGen.java  SessionParams.java  ShufflerElGamal.java  ShufflerElGamalGen.java  ShufflerElGamalSession.java  package-info.java
src/java/com/verificatum/protocol/secretsharing/: DemoPedersen.java  DemoPedersenSequential.java  Pedersen.java  PedersenBasic.java  PedersenSequential.java  PolynomialInExponent.java  ShamirBasic.java  package-info.java
src/java/com/verificatum/vmn/: VMNTool.java  package-info.java
src/m4/: ace_check_jar.m4  ace_check_loadjar.m4  ace_prog_jar.m4  ace_prog_java.m4  ace_prog_javac.m4  ace_prog_javadoc.m4  ace_prog_javah.m4  preprocessing.m4
src/mf/: MANIFEST.MF.src
tools/installation/: TestLoadJar.java
tools/staticanalysis/: generate_analysis.sh
tools/staticanalysis/checkstyle/: checkstyle_configure.xml  checkstyle_filter.sh  checkstyle_ruleset.xml  checkstyle_suppressions.xml  checkstyle_wrapper
tools/staticanalysis/findbugs/: findbugs_configure.xml  findbugs_wrapper
tools/staticanalysis/pmd/: pmd_filter.sh  pmd_ruleset.xml  pmd_wrapper
